# simple-atlas-cramming

./: .gitignore  CMakeLists.txt  README.md
data/src/: uv_input_1.ply  uv_input_2.ply  uv_input_simple.ply
src/: atlas_contour.cpp  atlas_contour.h  main.cpp  ply_shape.cpp  ply_shape.h
